--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,9 @@ h2 {
   float: right;
 }
 
+.container {
+  margin-top: 50px;
+}
 #hiddenDiv {
   margin-top: 30px;
   width: 500px;
@@ -70,4 +73,8 @@ button.submit {
   width: 100%;
   height: 35px;
   margin-top: 5px;
+}
+
+#emailText {
+  margin-top: 30px;
 }
