slight rework of getting corresponding id's for more efficiency, added show all link next to pagination

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,3 +86,12 @@ legend {
 .tableHeadId {
   display: none;
 }
+
+/* .fancySearchRow input {
+  width: 75% !important;
+} */
+
+#showAllLink {
+  font-weight: bold;
+  text-align: right;
+}
